erDiagram
    CLIENTES ||--o{ VEHICULOS : posee
    VEHICULOS ||--o{ ORDENES_SERVICIO : genera
    ORDENES_SERVICIO ||--o{ DETALLE_SERVICIO : contiene
    MECANICOS ||--o{ DETALLE_SERVICIO : realiza
    
    CLIENTES {
        int cliente_id PK
        varchar nombre
        varchar apellido
        varchar telefono
        varchar email UK
        date fecha_registro
    }
    
    VEHICULOS {
        int vehiculo_id PK
        int cliente_id FK
        varchar marca
        varchar modelo
        int anio
        varchar placa UK
        date fecha_ingreso
    }
    
    MECANICOS {
        int mecanico_id PK
        varchar nombre
        varchar apellido
        varchar especialidad
        date fecha_contratacion
    }
    
    ORDENES_SERVICIO {
        int orden_id PK
        int vehiculo_id FK
        date fecha_creacion
        varchar estado
        decimal costo_estimado
    }
    
    DETALLE_SERVICIO {
        int detalle_id PK
        int orden_id FK
        int mecanico_id FK
        text descripcion_trabajo
        decimal horas_trabajadas
        decimal costo_mano_obra
    }